DDI-Lifecycle/3.2/model/_sources/composite-types/GeographicLevelType/index.rst.txt
GeographicLevelType
-------------------

Describes a level within the GeographicStructure. In addition to a name and description, provides one or more GeographicLevelCodes by which it is identified with specified system, any coverage limitations, and parent position within a single hierarchy or if it is the result of layering multiple hierarchies, the lowest component level for each of the layering hierarchies. Allows for an indicator declaring that coverage of the parent level is or is not exhaustive.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "GeographicLevelName",":doc:`/composite-types/NameType/index`","0..n","A name for the GeographicLevel. May be expressed in multiple languages. Repeat the element to express names with different content, for example different names for different systems."
   "Description",":doc:`/composite-types/StructuredStringType/index`","0..1","A description of the GeographicLevel. May be expressed in multiple languages and supports the use of structured content."
   "GeographicLevelCode",":doc:`/composite-types/CodeValueType/index`","0..n","A code and its authorization source for identifying the level within a specific system."
   "CoverageLimitation",":doc:`/composite-types/InternationalStringType/index`","0..1","Describes a limitation of the coverage such as all objects of a specific type that meet population size requirements (i.e., All Places with a population of 10,000 or more)."
   "PrimaryComponentLevel",":doc:`/composite-types/PrimaryComponentLevelType/index`","0..n","Provides references to the base level elements that are used as building blocks for composed geographies. For example, Metropolitan areas that are composed of counties except in the New England States where they are composed of county subdivisions, or School Attendance Boundaries (SABINS) built from Census Blocks. This structure allows for specifying the basic building block for composed areas and any restrictions (coverage limitations). The field may be repeated to provide alternate information on the basic building blocks for areas outside of the coverage limitations described."
   "ParentGeographicLevelReference",":doc:`/composite-types/GeographicLevelType/index`","0..1","Reference to a single containing (parent) geography."
   "GeographicLayerBaseReference",":doc:`/composite-types/GeographicLevelType/index`","2..n","Use for geographic polygons that are the result of layering two or more geographic hierarchies where the polygon being described is the intersect of the layers. For example: State - County - County Subdivision - Place/Remainder - Tract [The portion of a tract that is within a single place (or non-place area) and a single county subdivision] This polygon is made by overlaying the following three geographic hierarchies: 1) State - Place, 2) State - County - Tract, and 3) State - County - Subdivision. The three GeographicLayerBase elements would point to Tract, Place, and County Subdivision."

Properties Inherited from IdentifiableType
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "URN","string","1..1",""
   "Agency","string","1..1",""
   "ID","string","1..1",""
   "Version","string","1..1",""
   "UserID",":doc:`/composite-types/UserIDType/index`","0..n","Allows for the specification of identifiers other than the specified DDI identification of the object. This may be a legacy ID from DDI-C, a system specific ID such as for a database or registry, or a non-DDI unique identifier. As the identifier is specific to a system the system must be identified with the UserID structure."
   "InheritanceAction","string","0..1","The attribute ""action"" is used for inheritance situations where there is an override at the local level (within a grouped StudyUnit) which is not available for further inheritance. There are three possible values for ""action"": Add - A new identifiable object (an Identifiable, Versionable, or Maintainable element) is provided locally with a new identifier (one that is not inherited). All properties (elements and attributes contained in the object) of the object are as specified. If an object with an existing id is created, this is an error.; Update - An object is provided locally with the SAME id as the inherited object. For each type of property that is specified locally, a full set of those properties is specified for local use. These properties replace any properties of this type which were inherited. Unspecified properties are used as inherited.; Delete - An object is provided locally with the SAME id as the inherited object. All properties specified locally in this object will be deleted if their types and values match those inherited. Note that to completely delete an object at the local level, all properties of the inherited object must be listed."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* :doc:`/composite-types/IdentifiableType/index`
    * **GeographicLevelType**


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/item-types/GeographicLocation/index`
* :doc:`/item-types/GeographicStructure/index`
* :doc:`/composite-types/GeographicCoverageType/index`
* :doc:`/composite-types/IdentificationPortionType/index`
* :doc:`/composite-types/IncludedGeographicStructureCodesType/index`
* :doc:`/composite-types/LevelReferenceType/index`
* :doc:`/composite-types/PrimaryComponentLevelType/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/GeographicLevelType.svg

